<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_layout"
    android:background="@drawable/rounded_background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/md_theme_secondary"
            android:src="@drawable/ic_wikipedia"
            android:contentDescription="@string/wikipedia_icon_desc" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/vikipediya"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/refresh_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/md_theme_secondary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_refresh_white"
            android:contentDescription="@string/refresh_button_desc" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_cc"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_articles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1,000,000"
                android:textSize="18sp"
                android:textColor="@color/blue_66cc"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/articles"
                android:textSize="14sp"
                android:textColor="@color/gray_66" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_active_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8,023"
                android:textSize="18sp"
                android:textColor="@color/blue_66cc"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active_users"
                android:textSize="14sp"
                android:textColor="@color/gray_66" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_edits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9,023,283"
                android:textSize="18sp"
                android:textColor="@color/blue_66cc"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edits"
                android:textSize="14sp"
                android:textColor="@color/gray_66" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/widget_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/gray_66"
        android:layout_marginTop="8dp"
        android:text="@string/source" />
</LinearLayout>
