<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieNoPlacesFound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/no_places_found_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_data_found" />

    <TextView
        android:id="@+id/tvNoPlacesFoundTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/no_places_found_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@id/lottieNoPlacesFound" />

    <TextView
        android:id="@+id/tvNoPlacesFoundSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/no_places_found_subtitle"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvNoPlacesFoundTitle" />

    <TextView
        android:id="@+id/tvUseMapsSuggestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/use_maps_suggestion"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvNoPlacesFoundSubtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>